--- a/Stones/src/app/app.component.html
+++ b/Stones/src/app/app.component.html
@@ -2,4 +2,6 @@
   {{title}}
 </h1>
 
-<stn-product></stn-product>
+<stn-product [product]="productParent" (priceChange)="showPrice($event)"></stn-product>
+
+{{productParent.price}}
