--- a/Stones/src/app/product/product/product.component.html
+++ b/Stones/src/app/product/product/product.component.html
@@ -1,3 +1,4 @@
+<ng-content></ng-content>
 <p>
   name: <span>{{product.name}}</span> <br>
   id: {{product.id}} <br>
@@ -5,4 +6,3 @@
 </p>
 <input type="text" #price>
 <button (click)="changePrice(price.value)">Preiserhöhung</button>
-
