--- a/Stones/src/app/product/product/product.component.html
+++ b/Stones/src/app/product/product/product.component.html
@@ -1,8 +1,10 @@
 <ng-content></ng-content>
-<p [ngStyle]="styleObject" [ngClass]="{'border-green': product.price<50}">
+<button (click)="visible = !visible" >Toggle product</button>
+<p [ngStyle]="styleObject" [ngClass]="{'border-green': product.price<50}" *ngIf="visible">
   name: <span>{{product.name}}</span> <br>
   id: {{product.id}} <br>
   price: {{product.price}}
 </p>
 <input type="text" #price>
 <button (click)="changePrice(price.value)">Preiserhöhung</button>
+
