material design integration

--- a/Stones/src/app/app.component.html
+++ b/Stones/src/app/app.component.html
@@ -3,5 +3,5 @@
 </h1>
 
 <stn-product [product]="product" (priceChange)="showPrice($event)" *ngFor="let product of products; let i = index">
-  <h2>Product {{i}}</h2>
+  <h2>Product {{i+1}}</h2>
 </stn-product>
