--- a/Stones/src/app/app.component.html
+++ b/Stones/src/app/app.component.html
@@ -1,5 +1,5 @@
 <md-toolbar color="primary">{{title}}</md-toolbar>
-<stn-edit-product></stn-edit-product>
+<stn-edit-product (productCreated)="addProduct($event)"></stn-edit-product>
 
 
 
