--- a/Stones/src/app/app.component.html
+++ b/Stones/src/app/app.component.html
@@ -1,6 +1,6 @@
 <md-toolbar color="primary">{{title}}</md-toolbar>
 <stn-edit-product (productCreated)="addProduct($event)"></stn-edit-product>
-
+<stn-reactive-product></stn-reactive-product>
 
 
 <stn-product [product]="product" (priceChange)="showPrice($event)" *ngFor="let product of products; let i = index">
