--- a/Stones/src/app/product/reactive-product/reactive-product.component.html
+++ b/Stones/src/app/product/reactive-product/reactive-product.component.html
@@ -1,4 +1,4 @@
-<h3>Reactive / Model Driven</h3>
+<h3>Reactive / Model Driven {{nameLength}}</h3>
 <form [formGroup]="productForm">
     <md-input-container>
         <input mdInput name="id" type="text" placeholder="id" [formControl]="id">
