--- a/Stones/src/app/product/product-list/product-list.component.html
+++ b/Stones/src/app/product/product-list/product-list.component.html
@@ -1,3 +1,3 @@
-<stn-product [product]="product" (priceChange)="showPrice($event)" *ngFor="let product of products; let i = index">
+<stn-product [product]="product" *ngFor="let product of products | async; let i = index">
   <h2>Product {{i+1}}</h2>
 </stn-product>
